k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ekap
  labels:
    app.kubernetes.io/part-of: ekap
